--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ channels==2.4.0
 channels-redis==2.4.2
 chardet==4.0.0
 charset-normalizer==2.0.7
+colorama==0.4.4
 config==0.5.1
 constantly==15.1.0
 coreapi==2.3.3
@@ -90,7 +91,7 @@ openapi-codec==1.3.2
 openpyxl==3.0.9
 packaging==21.0
 paramiko==2.7.2
-pillow==7.0.0
+Pillow==7.0.0
 platformdirs==2.4.0
 polib==1.1.1
 psycopg2-binary==2.8.4
@@ -130,6 +131,7 @@ tablib==3.1.0
 tblib==1.7.0
 toml==0.10.2
 Twisted==21.2.0
+twisted-iocpsupport==1.0.2
 txaio==21.2.1
 typed-ast==1.4.3
 typing-extensions==3.10.0.2
